--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "logger",
   "description": "A logging tool",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:ezzygemini/logger.git"
+  },
+  "license": "MIT License",
   "version": "0.0.1",
   "dependencies": {
     "callsite": "^1.0.0",
