--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "callsite": "^1.0.0",
     "cli-color": "^1.1.0",
     "config-setup": "git@github.com:ezzygemini/config-setup.git#head",
+    "true-typeof": "git@github.com:ezzygemini/true-typeof.git#head",
     "path": "^0.12.7"
   }
 }
