--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "A logging tool for node",
   "repository": {
     "type": "git",
-    "url": "git@github.com:ezzygemini/logger.git"
+    "url": "https://github.com/ezzygemini/logger.git"
   },
   "license": "MIT",
   "version": "0.1.0",
