Adding unit tests to the logger and improving the return type of the methods.

--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
   },
   "license": "MIT",
   "version": "0.1.0",
+  "scripts": {
+    "test": "node node_modules/testing"
+  },
   "dependencies": {
+    "argument": "git://github.com/ezzygemini/argument.git",
     "callsite": "^1.0.0",
     "cli-color": "^1.1.0",
     "config-setup": "git://github.com/ezzygemini/config-setup.git",
     "true-typeof": "git://github.com/ezzygemini/true-typeof.git",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "testing": "git://github.com/ezzygemini/testing.git"
   }
 }
