--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   "dependencies": {
     "callsite": "^1.0.0",
     "cli-color": "^1.1.0",
-    "ezzy-argument": "^0.1.13",
-    "ezzy-config-setup": "^0.1.11",
+    "ezzy-argument": "^0.1.14",
+    "ezzy-config-setup": "^0.1.12",
+    "ezzy-testing": "^0.1.17",
     "ezzy-typeof": "0.0.1",
     "path": "^0.12.7"
   },
